--- a/admin/css/admin-snapshot.css
+++ b/admin/css/admin-snapshot.css
@@ -279,3 +279,27 @@ ul.alert-dropdown {
     background-color: #ddd;
     padding: 10px;
 }
+
+/******  Photo library modal  ******/
+.modal-dialog{
+    width: 90% !important;
+}
+
+.modal-body{
+    overflow: auto;
+    /*height: 300px !important;*/
+    min-height: 300px !important;
+}
+
+.modal_thumbnails{
+    width: 150px;
+    height: 100px !important;
+}
+
+#set_user_image{
+    margin: 10px;
+}
+
+#modal_sidebar{
+    position: fixed !important;
+}
